# 0P-Stack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main-stage1.cpp  main-stage3.cpp  stack-stage1.cpp  stack-stage1.h  stack-stage3.h
stage1-tests/: earlywarning-uses-dynamic-allocation.h  header-sans-using-namespace.h  stage1-tests.cpp
stage2-3-tests/: earlywarning-detect-memory-leak.h  earlywarning-use-newdelete-ops.h  earlywarning-uses-dynamic-allocation.h  sneaky.cpp  stage2-tests-other-types.cpp  stage2-tests-string.cpp  stage3-tests.cpp
